Student6Project/force-app/main/default/objects/Script__c/fields/Actors_role_type__c.field-meta.xml
<CustomField>
    <fullName>Actors_role_type__c</fullName>
    <label>Actors role type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main character</fullName>
            </value>
            <value>
                <fullName>Side Character</fullName>
            </value>
            <value>
                <fullName>Dumb guy</fullName>
            </value>
            <value>
                <fullName>Villain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>