Student6Project/force-app/main/default/objects/Script__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Picking the right genre can generate a lot of interest!</description>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>