Student6Project/force-app/main/default/objects/Script__c/fields/Roles_Required__c.field-meta.xml
<CustomField>
    <fullName>Roles_Required__c</fullName>
    <inlineHelpText>Pls use words like &apos;Main Character, Supporting Role, Villain&apos;. And for separation use &quot;,&quot;</inlineHelpText>
    <label>Roles Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>