Student6Project/force-app/main/default/objects/Script__c/listViews/My_recently_viewed.listView-meta.xml
<ListView>
    <fullName>My_recently_viewed</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>Title__c</columns>
    <filterScope>Mine</filterScope>
    <label>My recently viewed</label>
</ListView>